# backend/controllers/authController.js
@@ -1,9 +1,9 @@
-"use strict";
+'use strict';
 
-const db = require("../store/db");
-const chalk = require("chalk");
-const jwt = require("../auth/");
-const response = require("../network/response");
+const db = require('../store/db');
+const chalk = require('chalk');
+const jwt = require('../auth/');
+const response = require('../network/response');
 
 exports.login = async (req, res) => {
   try {
@@ -19,7 +19,7 @@ exports.login = async (req, res) => {
       ],
     });
     if (!getUser) {
-      return response.error(req, res, "User or email does not exist", 404);
+      return response.error(req, res, 'User or email does not exist', 404);
     }
     if (getUser.dataValues.enable !== 0) {
       const auth_password = getUser.Auths[0].dataValues.password;
@@ -28,7 +28,7 @@ exports.login = async (req, res) => {
         auth_password
       );
       if (!result) {
-        return response.error(req, res, "Incorrect password", 403);
+        return response.error(req, res, 'Incorrect password', 403);
       }
       const token = jwt.sign({
         id: getUser.dataValues.id,
@@ -36,17 +36,27 @@ exports.login = async (req, res) => {
         isAdmin: getUser.dataValues.admin,
         active: getUser.dataValues.enable,
       });
-      return response.success(req, res, token, 200);
+      const user = {
+        id: getUser.dataValues.id,
+        email: getUser.dataValues.email,
+        isAdmin: getUser.dataValues.admin,
+        active: getUser.dataValues.enable,
+      };
+      const data = {
+        token: token,
+        user: user,
+      };
+      return response.success(req, res, data, 200);
     } else {
       return response.error(
         req,
         res,
-        "Inactive user contact administrator",
+        'Inactive user contact administrator',
         401
       );
     }
   } catch (err) {
-    console.error(chalk.red("auth-ctr"), err);
+    console.error(chalk.red('auth-ctr'), err);
     response.error(req, res, err.message, 500);
   }
 };
